--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,6 @@ KV_URL=""
 KV_REST_API_READ_ONLY_TOKEN=""
 KV_REST_API_TOKEN=""
 KV_REST_API_URL=""
+
+# If you want to use your own FAL key, set this to true
+NEXT_PUBLIC_CUSTOM_KEY=""
